--- a/ansible/inventory.yml
+++ b/ansible/inventory.yml
@@ -1,7 +1,7 @@
 ---
 all:
-  vars:
-    ansible_ssh_private_key_file: '~/.ssh/privat/ansible'
+  # vars:
+    # ansible_ssh_private_key_file: '~/.ssh/privat/ansible'
   children:
     dns:
     k3s_cluster:
