--- a/ansible/playbook/site.yml
+++ b/ansible/playbook/site.yml
@@ -5,8 +5,8 @@
   become: true
   roles:
     - role: prereq
-    - role: airgap
-    - role: raspberrypi
+#    - role: airgap
+#    - role: raspberrypi
 
 - name: Setup K3S server
   hosts: server
