--- a/ansible/inventory.yml
+++ b/ansible/inventory.yml
@@ -6,6 +6,11 @@ all:
     dns:
     k3s_cluster:
 
+dns:
+  hosts: 
+    dns01v.sfenzke-home.de:
+      ansible_host: 192.168.7.2
+
 k3s_cluster:
   children:
     server:
