first iteration of dns role

--- a/ansible/ansible.cfg
+++ b/ansible/ansible.cfg
@@ -2,6 +2,8 @@
 nocows = True
 roles_path = ./roles
 inventory  = ./inventory.yml
+remote_user = ansible
+private_key_file = $HOME/.ssh/ansible
 
 remote_tmp = $HOME/.ansible/tmp
 local_tmp  = $HOME/.ansible/tmp
