--- a/ansible/playbook/site.yml
+++ b/ansible/playbook/site.yml
@@ -1,4 +1,10 @@
 ---
+- name: 'setup dns'
+  hosts: 'dns'
+  become: true
+  roles:
+    - role: 'dns'
+
 - name: Cluster prep
   hosts: k3s_cluster
   gather_facts: true
