added services to dns

--- a/ansible/group_vars/dns.yml
+++ b/ansible/group_vars/dns.yml
@@ -16,3 +16,8 @@ zones:
       kube-worker05: '192.168.7.24'
       kube-worker06: '192.168.7.25'
       nas: '192.168.178.25'
+      pve01: '192.168.5.31'
+      pve02: '192.168.5.32'
+      pve03: '192.168.5.33'
+      paperless: '192.168.7.10'
+      longhorn: '192.168.7.10'
