--- a/kubernetes/longhorn-dashboard.yml
+++ b/kubernetes/longhorn-dashboard.yml
@@ -1,13 +1,13 @@
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: longhorn-dahboard
+  name: longhorn-dashboard
   namespace: longhorn-system
   labels:
     name: longhorn-dashboard
 spec:
   rules:
-  - host: longhorn.sfenzke.de
+  - host: longhorn.sfenzke-home.de
     http:
       paths:
       - pathType: Prefix
